--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "ruspiro-brain"
 authors = ["Andre Borrmann <pspwizard@gmx.de>"]
 version = "0.1.0" # remember to update html_root_url
 description = """
-The ``brain`` provides the heart of the async "thinking"" of a **RusPiRo** bare metal kernel for the
+The ``Brain`` provides the heart of the async "thinking"" of a **RusPiRo** bare metal kernel for the
 Raspberry Pi
 """
 license = "Apache-2.0"
@@ -14,6 +14,7 @@ keywords = ["RusPiRo", "baremetal", "raspberrypi", "brain", "async"]
 categories = ["no-std", "embedded"]
 edition = "2018"
 links = "ruspiro-brain"
+exclude = ["/pi_test"]
 
 
 [badges]
@@ -27,9 +28,12 @@ assert_matches = "1.2"
 
 [dependencies]
 pin-utils = "0.1.0-alpha.4"
-ruspiro-boot = { path = "../boot", version = "0.3", features = ["ruspiro_pi3", "with_panic"] }
+ruspiro-boot = { path = "../boot", version = "0.3", features = ["with_panic"] }
 ruspiro-singleton = { path = "../singleton", version = "0.3" }
 ruspiro-lock = { path = "../lock", version = "0.3" }
+ruspiro-interrupt = { path = "../interrupt", version = "0.3" }
+ruspiro-console = { path = "../console", version = "0.3" }
 
 [features]
 singlecore = ["ruspiro-boot/singlecore"]
+ruspiro_pi3 = ["ruspiro-boot/ruspiro_pi3"]
