--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ ruspiro-singleton = { path = "../singleton", version = "0.3" }
 ruspiro-lock = { path = "../lock", version = "0.3" }
 ruspiro-interrupt = { path = "../interrupt", version = "0.3" }
 ruspiro-console = { path = "../console", version = "0.3" }
+ruspiro-brain-macros = { path = "./macros" }
+
 
 [features]
 singlecore = ["ruspiro-boot/singlecore"]
