--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -16,8 +16,12 @@ edition = "2018"
 [lib]
 proc-macro = true
 
+[dev-dependencies]
+ruspiro-brain = { path = "../", version = "*", features = ["ruspiro_pi3"] }
+
 [dependencies]
-syn = { version = "0.15.42", features = ["extra-traits", "full"] }
+proc-macro2 = "0.4"
+syn = { version = "0.15.42", features = ["extra-traits", "full", "visit", "fold"] }
 quote = "0.6.13"
 
 [features]
